# exba-wasm-web-starter

./: .gitignore  ARCHITECTURE_PLAN.md  DEVELOPMENT_LESSONS.md  README.md  TODOS.md  biome.json  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.cjs  tsconfig.json  vitest.config.ts  vitest.setup.ts
archive/: BaseComponent.ts  Functional.ts  Router.test.ts  Router.ts  TemplateCompiler.test.ts  TemplateCompiler.ts  WasmBridge.test.ts
bridge/: manager.ts  types.ts
components/browser-api/: audio-demo.ts  battery-demo.ts  canvas-demo.ts  clipboard-demo.ts  eyedropper-demo.ts  fullscreen-demo.ts  geo-demo.ts  network-demo.ts  storage-demo.ts  (+1 more)
coverage/: clover.xml  coverage-final.json  index.html
docs/: index.html
docs-api-generator/: .gitignore  README.md  package.json  rsbuild.config.ts  tsconfig.json
examples/: README.md
public/: index.html
scripts/: generate.ts
shell/: constants.ts  main.ts  utils.ts  view-grid.ts
src/: advanced.test.ts  baex.test.ts  baex.ts  exba.test.ts  main.ts  reactivity.test.ts  state.ts  style.css  styles.ts
src-alt/: app.ts  devtools.ts  docs-advanced.ts  docs-examples.ts  main.test.ts  main.ts  style.css  styles.ts  tab-state.ts  table-operations.ts  table-view.ts  vite-env.d.ts
utils/: index.ts
wasm/: Cargo.toml
wasm-src/: Cargo.toml
wasm/bindings/: DomInstruction.ts  DomNode.ts  HLIR.ts  IRBundle.ts  IRCommand.ts  IRResult.ts  KanbanTask.ts  LLIR.ts  SampleTaskState.ts  SystemInfo.ts
wasm/src/: actions.rs  dom_engine.rs  ir.rs  kanban.rs  lib.rs  sample_task.rs  state.rs  sys_info.rs  utils.rs
(+256 files in other folders)
