[package]
name = "wasm-logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
js-sys = "0.3"
tracing = "0.1"
tracing-wasm = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt"] }
web-sys = { version = "0.3", features = [
    "Window", 
    "Document", 
    "console", 
    "Navigator", 
    "Screen", 
    "Performance", 
    "HtmlCanvasElement", 
    "WebGlRenderingContext", 
    "WebglDebugRendererInfo"
] }
ts-rs = "12"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
